--- a/NueSelection-Ch5/SelectionNueVar-Ch5.tex
+++ b/NueSelection-Ch5/SelectionNueVar-Ch5.tex
@@ -1,8 +1,8 @@
 \par This section describes the variables used in the $\nu_e$ selections to isolate features that are specific to events with final-state electrons. We split these variables in several categories according to the pertinence of the calorimetric or topological information used: Slice Variables, Shower, Track, Shower and Track, and Shower/Track-like  Classification Variables,  2nd Shower-Based $\pi^0$ Rejection Variables.  While table ~\ref{tab:variableSummary} summarizes all variables used with a brief description, variables that warrant a longer introduction are described below.
 
 \par \noindent  \textbf{Slice Variables}: these variables describe general features of the reconstructed neutrino interaction or event.
-\par \noindent  \textbf{Track Variables}: these variables describe the features of tracks objects.
-\par \noindent \textbf{Shower Variables}:  these variables describe the features of shower objects.
+%\par \noindent  \textbf{Track Variables}: these variables describe the features of tracks objects.
+%\par \noindent \textbf{Shower Variables}:  these variables describe the features of shower objects.
 \par \noindent \textbf{Shower-Track Distance Variables}: these variables are used to measure the separation in space between the leading shower and the leading track, for events where at least one track and one shower are present in the slice. 
 \begin{itemize}
  \item[] \textbf{3D shower-track distance} (variable: \emph{tksh\_distance}).  This variable is the 3D distance between the shower start point and the reconstructed start point of the longest track in the slice. 
