--- a/main.tex
+++ b/main.tex
@@ -712,7 +712,7 @@ Details on MicroBooNE's approach to handling detector systematics can be found i
 \end{figure}
 
 \subsection{Flux Uncertainties \textcolor{green}{Maya}}
-The flux model and its uncertainties for MCC9~\cite{bib:fluxmcc9,bib:fluxtechnote} are largely the same as MCC8~\cite{bib:fluxtechnote}. We use the multisim technique to estimate the flux uncertainties. The various sources of uncertainties are taken as independent and are varied individually around the central value. They are listed in Table~\ref{tab:fluxsyst} along the number of universes considered for each. The fractional covariance matrix and correlation matrix for the 1eNp selection are presented in Figure~\ref{fig:fluxmatrices} \textcolor{blue}{which amount to 2\% in flux uncertainties}. Meanwhile, Figure~\ref{fig:fluxsystvars} displays the effects of reweighting central value in each universe of an individual parameter of flux.
+The flux model and its uncertainties for MCC9~\cite{bib:fluxmcc9,bib:fluxtechnote} are largely the same as MCC8~\cite{bib:fluxtechnote}. We use the multisim technique to estimate the flux uncertainties. The various sources of uncertainties are taken as independent and are varied individually around the central value. They are listed in Table~\ref{tab:fluxsyst} along the number of universes considered for each. The fractional covariance matrix and correlation matrix for the 1eNp selection are presented in Figure~\ref{fig:fluxmatrices} and show smaller uncertainties than expected, ~7\% uncertainty in the lowest visible energy bin (200-300 MeV) and 2-4\% in other bins. \textit{The evaluation of how flux-uncertainties are incorporated in the correlation matrix is therefore under further investigation}. Meanwhile, Figure~\ref{fig:fluxsystvars} displays the effects of reweighting central value in each universe of individual example parameters of the flux model.
 
 \begin{table}[H]
 \centering
@@ -744,12 +744,12 @@ piplus\_PrimaryHadronSWCentralSplineVariation     &  Primary Hadron Sanford Wang
 \begin{center}
     \begin{subfigure}[b]{0.45\textwidth}
     \centering
-    \includegraphics[width=1.00\textwidth]{CovarianceMatrices/SBNfit_fractional_covariance_matrix_nue_reco_e_genietune_run1_fluxonly_mc_collapsed.pdf}
+    \includegraphics[width=1.00\textwidth]{CovarianceMatrices/SBNfit_fractional_covariance_matrix_nue_reco_e_scaledtofullpot_mc_collapsed.pdf}
     \caption{fractional covariance matrix}
     \end{subfigure}
     \begin{subfigure}[b]{0.45\textwidth}
     \centering
-    \includegraphics[width=1.00\textwidth]{CovarianceMatrices/SBNfit_correlation_matrix_nue_reco_e_genietune_run1_fluxonly_mc_collapsed.pdf}
+    \includegraphics[width=1.00\textwidth]{CovarianceMatrices/SBNfit_correlation_matrix_nue_reco_e_scaledtofullpot_mc_collapsed.pdf}
     \caption{correlation matrix}
     \end{subfigure}
 \caption{\label{fig:fluxmatrices} Flux only correlation and fractional covariance matrix for the 1eNp selection as a function of reconstructed visible energy. The global bin number starts from 0.2 GeV up to 1.5 GeV, in bins of 0.1 GeV.}
@@ -761,7 +761,7 @@ piplus\_PrimaryHadronSWCentralSplineVariation     &  Primary Hadron Sanford Wang
 \begin{center}
     \begin{subfigure}[b]{0.33\textwidth}
     \centering
-    \includegraphics[width=1.00\textwidth]{systvariations/Variation_nue_reco_e_genietune_run1_fluxonly_kplus_PrimaryHadronFeynmanScaling_nu_uBooNE_nue_intrinsic.pdf}
+    \includegraphics[width=1.00\textwidth]{systvariations/Variation_nue_reco_e_genietune_run1_piplus_PrimaryHadronSWCentralSplineVariation_nu_uBooNE_nue_intrinsic.pdf}
     %\caption{\label{fig:numuconstraint:flux}$\nu_{\mu}$-$\nu_e$flux correlation matrix}
     \end{subfigure}
     \begin{subfigure}[b]{0.33\textwidth}
@@ -779,12 +779,14 @@ piplus\_PrimaryHadronSWCentralSplineVariation     &  Primary Hadron Sanford Wang
 \end{figure}
 
 \subsection{Neutrino Interaction Modeling Uncertainties \textcolor{green}{Maya/Sebastien}}
-We use the \texttt{GENIE} event reweighting framework with the standard reweighting parameters, also known as ``knobs'', to model the neutrino cross section and final statistical uncertainties. Document~\cite{bib:geniesupportnote} describes the GENIE cross-section model, recommended central-value tune, and the recommended uncertainties for MCC9 analyses. 
+We use the \texttt{GENIE} event reweighting framework with the standard reweighting parameters, also known as ``knobs'', to model neutrino cross section and FSI uncertainties. Document~\cite{bib:geniesupportnote} describes the GENIE cross-section model, recommended central-value tune, and the recommended uncertainties for MCC9 analyses. 
 
 The updated Genie central value tune is guided on fits to the T2K data which increase the MA CCQE and scale up the MEC normalization.
 
 A total of 55 sources of uncertainties are considered. The majority of them, 49, are varied in a multisim way around the updated Genie central value tune. Their variations are simultaneous to take into account their correlations. This simultaneous variation is given the name All\_Genie. They are listed in Table~\ref{tab:AllGenie}. The variations of the remaining six sources cover the full range of the parameter values: they are varied from 0 to 1. Table~\ref{tab:geniesyst} lists the uncertainties that are used in the analysis and the number of universes investigated.
 
+\textit{A few technical complications in the treatment of the updated GENIE CV tune weights in SBNFit are still being resolved. These complications include the the need for a different procedure to account for the different treatment of event weights in systematic variations vs CV samples. Because the technical work to address these has not been fully completed and validated, the impact of cross-section and flux systematic uncertainties will be revisited between now and the February collaboration meeting.}
+\begin{comment}
 \textit{Note on the cross section systematics: The genie systematics is currently still under investigation. 
 As mentioned above, the cross sections variations are thrown around the tuned genie central value and therefore already have the tuned central value weight folded in. 
 Meanwhile, the default central value has to be multiplied with the genie central value tune weight to update it to the new cv value. 
@@ -792,6 +794,7 @@ We have to properly account for the Genie tuned central value that is already fo
 the central value in a bin is calculated correctly for systematics.
 We observed a few number of large weights in the XSecShape\_CCMEC\_Genie knob which is also associated with a large weights for the Genie central value tune. Due to these large weights and other issues that currently not understood yet, the procedure to correct out the Genie tuned central value cause the genie cross section weights to not be centered around the central value, for example in RPA\_CCQE\_Genie variations (see Figure~\ref{fig:genievarsRPA}).
 The fractional covariance matrix and correlation matrix for the 1eNp0$\pi$ selection are presented in Figure~\ref{fig:geniematrices} which is estimated to be ~20\% in average and up to 45\% at around 0.2 - 0.4 GeV. Meanwhile, Figure~\ref{fig:geniesystvars} displays the effects of reweighting central value in each universe of an individual parameter of flux.}
+\end{comment}{}
 %The framework that we are using has limitations on the handling of the different weights that need to be applied to the central value and the universes. As we can only provide one weight to the framework, and we have to correct primarily for the central value, the cross section variations are currently double counting the genie tune weight, and therefore the average distributions of the universes in each genie reweighting parameters do not centered at the central value as shown in Figure~\ref{fig:geniesystvars}. This excursion from the central value resulted in the overestimation of the cross section uncertainty where the uncertainties average around 15\%, and up to 800\% in the lowest neutrino energy bin. 
 %The work to fix the handling of the tuning when constructing the covariance matrix is on-going and we will update these set of plots when the fix is committed.}
 
@@ -917,7 +920,7 @@ Theta\_Delta2Npi\_Genie       &  Interpolates angular distribution for $\Delta\t
 \end{figure}
 
 \subsection{Hadronic Reinteraction Uncertainties \textcolor{green}{Sebastien}}
-An additional type of systematic uncertainty that can be included is that related to hadrons interacting strongly with argon nuclei~\cite{bib:reintslides}. These hadronic rescatterings can induce a large momentum transfer in the hadron and thus have an impact in the reconstruction and the selection of events. These uncertainties can be thought of as GEANT4 uncertainties in the cross section of a hadron with argon nuclei. The hadronic reinteraction uncertainties listed in Table~\ref{tab:fluxsyst} are technically readily available to the analysis but have not been investigated.
+An additional type of systematic uncertainty that can be included is that related to hadrons interacting strongly with argon nuclei~\cite{bib:reintslides}. These hadronic rescatterings can induce a large momentum transfer in the hadron and thus have an impact in the reconstruction and the selection of events. Additionally, they can led to a re-classification of the event based on the final-state particles produced in the event. These uncertainties can be thought of as GEANT4 uncertainties in the cross section of a hadron's interaction with argon nuclei. The hadronic reinteraction uncertainties listed in Table~\ref{tab:fluxsyst} have recently been made available for MCC9 (see DocDB 27561~\cite{bib:g4uncertainties}) and will be included in the analysis in its next iteration.
 
 
 \begin{table}[H]
@@ -1280,7 +1283,7 @@ The distribution of the test statistic for the null and alternative hypothesis d
 \end{center}
 \end{figure}
 
-
+\par This preliminary exploration of the analysis' sensitivity to 3+1 oscillation models will be further explored as the analysis progresses in the coming weeks.
 
 
 \newpage
@@ -1486,23 +1489,61 @@ Figures~\ref{fig:1eNp:dataMCRun1:reco_nu_vtx}-\ref{fig:1eNp:dataMCRun1:pi02} sho
 
 \subsection{Nue CC Inclusive}
 \label{sec:datamc:nueccinclusive}
-This section includes the data-MC comparisons plot for the $\nu_e$ CC inclusive selection which where omitted in the text \ref{fig:pre_vtx}.
+This section includes the data-MC comparisons and efficiencies plot for the $\nu_e$ CC inclusive selection which where omitted in \cref{sec:nueselection:inclusive}.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{NueCCsel/Images/run1/pre_vtx.pdf}
-    \caption{Vertex position of events passing the pre-selection cuts.}
-    \label{fig:pre_vtx}
+    \includegraphics[height=4.5cm]{NueCCsel/Images/run1/pre_vtx.pdf}
+    \includegraphics[height=4.5cm]{NueCCsel/Images/run1/pre_angles.pdf}
+    \caption{Vertex position of neutrino candidate and angular distributions of electron candidate before selection.}
+    \label{fig:nuecc:pre_sel}
 \end{figure}
-\clearpage
-\newpage
 
-
-\begin{figure}
+\begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{NueCCsel/Images/run1/e_cand_dedx.pdf}
-    \caption{d$E$/d$x$ of the electron candidate shower after the pre-selection. The collection plane shows the cleanest e/$\gamma$ separation. The middle panel combines all three planes, leading to a smaller peak at 0 in cases where there are few hits on the collection plane\textcolor{blue}{I don't see the peak at zero}. The plane on the right uses the collection plane but leaves a \SI{1}{\cm} gap, which is beneficial when vertex activity is merged into the electron shower.}
-    \label{fig:e_cand_dedx}
+    \includegraphics[height=5cm]{NueCCsel/Images/run1/efficiency_cat_2.pdf}
+    \includegraphics[height=5cm]{NueCCsel/Images/run1/efficiency_int.pdf}
+    \caption{Efficiencies at any stage in the selection, broken down in interaction types and final states.}
+    \label{fig:nuecc:eff_all}
 \end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[height=5cm]{NueCCsel/Images/run1/e_cand_dedx.pdf}
+    \includegraphics[height=5cm]{NueCCsel/Images/run1/e_cand_secondshower.pdf}
+    \includegraphics[height=5cm]{NueCCsel/Images/run1/e_cand_subclusters.pdf}
+    \includegraphics[height=5cm]{NueCCsel/Images/run1/e_cand_dist.pdf}
+    \caption{Variables used for electron identification.}
+    \label{fig:nuecc:e_cand}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[height=5cm]{NueCCsel/Images/run1/pre_daughter_1.pdf}
+    \includegraphics[height=5cm]{NueCCsel/Images/run1/pre_daughter_2.pdf}
+    \caption{Variables used for classify the other daughters.}
+    \label{fig:nuecc:other}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[height=5cm]{NueCCsel/Images/run1/bdt_1.pdf}
+    \includegraphics[height=5cm]{NueCCsel/Images/run1/pre_e_score.pdf}
+    \includegraphics[height=5cm]{NueCCsel/Images/run1/bdt_2.pdf}
+    \includegraphics[height=5cm]{NueCCsel/Images/run1/pre_daughter_score.pdf}
+    \caption{Variables used to do the final selection and event classification.}
+    \label{fig:nuecc:event}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.48\textwidth]{NueCCsel/Images/run1/nue_shower_energy_y.pdf} \hfill
+    \includegraphics[width=0.48\textwidth]{NueCCsel/Images/run1/nue_shower_theta.pdf}
+    \caption{Distributions of the electron candidate after the final selection.}
+    \label{fig:nuecc:after}
+\end{figure}
+
+\clearpage
+
 
 \subsection{$\pi^0$ filter}
 \par Figures~\ref{fig:pi0:inputs:shrscore1:RUN1}-\ref{fig:pi0:inputs:dot2:RUN3} show the distribution of reconstructed quantities for inputs to the $\pi^0$ selection. Figures~\ref{fig:pi0:inputs:shrscore1:RUN1}-\ref{fig:pi0:inputs:dot2:RUN1} refer to Run1. Figures~\ref{fig:pi0:inputs:shrscore1:RUN3}-\ref{fig:pi0:inputs:dot2:RUN3} refer to Run3. As a reminder, these comparisons are performed after a 0.7 scaling is applied to CC and NC $\pi^0$ events based on the normalization differences found in the $\pi^0$ mass distributions shown in section~\ref{sec:controls:pi0}.
@@ -1724,6 +1765,10 @@ Press W H, Teukolsky S A, Vetterling W T and Flannery B P, \emph{Numerical Recip
 \bibitem{bib:tpccalibrationnote}
 MicroBooNE Detector and Calibration groups, \emph{Calorimetry reconstruction and calibration in MCC9}
 \href{https://microboone-docdb.fnal.gov/cgi-bin/private/ShowDocument?docid=27042}{DocDB 27042}
+
+\bibitem{bib:g4uncertainties}
+Kirsty Duffy, \emph{Geant4 Systematics: Eventweight module validation}
+\href{https://microboone-docdb.fnal.gov/cgi-bin/private/ShowDocument?docid=27561}{DocDB 27561}
 
 \end{thebibliography}
 
